# Nav-Stack-From-Scratch

./: .gitignore  README.md  bringup.sh  drone_logger.sh  params.sh  run.sh  run_solo.sh  teleop_hector.sh  teleop_turtle.sh
.github/workflows/: main.yml
src/bot_utils/: CMakeLists.txt  package.xml
src/bot_utils/include/bot_utils/: bot_utils.h  map_data.h  spline_data.h
src/bot_utils/src/: bot_utils.cpp  spline_data.cpp
src/commander/: CMakeLists.txt  package.xml
src/commander/config/: commander.yaml  pid.yaml  trajectory.yaml
src/commander/include/commander/: commander.h  pid_params.h
src/commander/include/local_planner/: local_planner.h
src/commander/include/pid_controller/: pid_controller.h
src/commander/src/commander/: commander.cpp  commander_node.cpp
src/commander/src/local_planner/: local_planner.cpp
src/commander/src/pid_controller/: pid_controller.cpp
src/drone_commander/: CMakeLists.txt  package.xml
src/drone_commander/config/: drone_commander.yaml  trajectory_generator.yaml  velocity_controller.yaml
src/drone_commander/include/drone_commander/: drone_commander.h  mission_states.h  velocity_controller_params.h
src/drone_commander/include/trajectory_generator/: trajectory_generator.h
src/drone_commander/include/velocity_controller/: velocity_controller.h
src/drone_commander/src/drone_commander/: drone_commander.cpp  drone_commander_node.cpp  mission_states.cpp
src/drone_commander/src/trajectory_generator/: trajectory_generator.cpp
src/drone_commander/src/velocity_controller/: velocity_controller.cpp
src/drone_ins/: CMakeLists.txt  package.xml
src/drone_ins/config/: drone_ins.yaml
src/drone_ins/src/: motion.cpp
src/ee4308_bringup/: CMakeLists.txt  package.xml
src/ee4308_bringup/launch/: bringup_labs.launch  bringup_proj1.launch  run_client.launch  run_proj1.launch
src/ee4308_bringup/worlds/world20/: world20.sh  world20.world  world20_goals.yaml
src/ee4308_bringup/worlds/world21/: world21.sh
src/ee4308_bringup/worlds/world23proj1/: world23proj1.sh  world23proj1_goals.yaml
src/ee4308_hector/: CMakeLists.txt  package.xml
src/ee4308_hector/config/: hector.yaml
src/ee4308_hector/include/ee4308_hector/: common.hpp  hector_trajectory.hpp
src/ee4308_hector/launch/: run.launch
src/ee4308_hector/src/: common.cpp  hector_trajectory.cpp  main.cpp  motion.cpp  move.cpp
src/ee4308_turtle/: CMakeLists.txt  package.xml
src/ee4308_turtle/config/: turtle.yaml
src/ee4308_turtle/include/ee4308_turtle/: common.hpp  djikstra.hpp  grid.hpp  los.hpp  planner.hpp  trajectory.hpp
src/ee4308_turtle/launch/: run.launch
src/ee4308_turtle/src/: common.cpp  djikstra.cpp  grid.cpp  los.cpp  main.cpp  motion.cpp  move.cpp  planner.cpp  trajectory.cpp
src/global_planner/: CMakeLists.txt  package.xml
src/global_planner/config/: global_planner.yaml
src/global_planner/include/algo/: arastar.h  astar.h  djikstra.h  grid_planner_core.h  inflatedastar.h  thetastar.h
src/global_planner/include/global_planner/: global_planner.h  map_data.h
src/global_planner/src/algo/: arastar.cpp  astar.cpp  djikstra.cpp  grid_planner_core.cpp  inflatedastar.cpp
src/global_planner/src/global_planner/: global_planner.cpp  global_planner_node.cpp
src/hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_base.urdf.xacro
src/hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_two_quadrotors.launch
src/hector_quadrotor/hector_quadrotor_gazebo/urdf/: quadrotor_sensors.gazebo.xacro
src/hmsgs/: CMakeLists.txt  package.xml
src/hmsgs/msg/: Goal.msg
src/loco_mapping/: CMakeLists.txt  package.xml
src/loco_mapping/config/: motion_filter.yaml  occupancy_grid.yaml
src/loco_mapping/include/: motion_filter.h  occupancy_grid.h
src/loco_mapping/launch/: motion_filter.launch  occupancy_grid.launch
src/loco_mapping/src/: motion_filter.cpp  motion_filter_node.cpp  occupancy_grid.cpp  occupancy_grid_node.cpp
src/mission_planner/: CMakeLists.txt  package.xml
src/mission_planner/config/: mission_planner.yaml
src/mission_planner/include/: mission_planner.h
src/mission_planner/src/: mission_planner.cpp  mission_planner_node.cpp
src/navigator/: CMakeLists.txt  package.xml
src/navigator/include/navigator/: navigator.h
src/navigator/src/: navigator.cpp  navigator_node.cpp
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: core_hector_config.yaml  core_turtle_config.yaml
src/robot_bringup/launch/: bringup_robots.launch  run_robots.launch  spawn_quadrotor.launch
src/robot_bringup/logging/: lookahead_logger.xml
src/robot_bringup/rviz/: mode1.rviz  mode2.rviz  mode3.rviz
src/robot_bringup/scripts/: teleop_hector.py  teleop_turtle.py
src/robot_bringup/urdf/: quadrotor.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_proj2.urdf.xacro
src/robot_bringup/worlds/world0/: world0.sh  world0.world  world0_hgoals.yaml  (+1 more)
src/tmsgs/: CMakeLists.txt  package.xml
src/tmsgs/msg/: Goal.msg  TurtlePath.msg  TurtleSpline.msg
src/tmsgs/srv/: Brake.srv  FindFallbackPosition.srv  PlanMainPath.srv  TriggerPlannerReplan.srv  UpdateTurtleGoal.srv
src/turtle_bringup/: CMakeLists.txt  package.xml
src/turtle_bringup/launch/: bringup_labs.launch  bringup_proj1.launch  bringup_proj2.launch  bringup_soloflight.launch  run_client.launch  soloflight.launch  spawn_quadrotor.launch
src/turtle_bringup/logging/: drone_logging.rviz  drone_logging.xml
src/turtle_bringup/rviz/: labs.rviz  proj1.rviz  proj2.rviz
src/turtle_bringup/src/: tf2_turtle.cpp
src/turtle_bringup/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_proj2.gazebo.xacro  turtlebot3_burger_proj2.urdf.xacro
src/turtle_bringup/worlds/world0/: world0.sh  world0_goals.yaml
src/turtle_bringup/worlds/world20/: world20_goals.yaml
src/turtle_bringup/worlds/world20/config/: world20.yaml
src/turtle_bringup/worlds/world21/: world21.world
src/turtle_bringup/worlds/world21/config/: world21.yaml
src/turtle_bringup/worlds/world23/config/: world23.yaml
src/turtle_bringup/worlds/world23proj1/: world23proj1.sh
(+4 files in other folders)
